Added background, mission overview, implementation details to site.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Virtual Reality Headtracker" />
+    <meta name="description" content="TurtleBot Mission Control" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title></title>
+    <title>TurtleBot Mission Control</title>
   </head>
 
   <body>
@@ -18,16 +18,72 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/mbanderson/turtlebot_mission_control/">View on GitHub</a>
 
-          <h1 id="project_title"></h1>
-          <h2 id="project_tagline"></h2>
-
+          <h1 id="project_title">TurtleBot Mission Control</h1>
+          <h2 id="project_tagline">Michael Anderson, Connor Anderson, Kyle Brown, and Hala Al-Khalil</h2>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1></h1>
+	<!-- Background -->
+        <h1>Why Autonomous Robots?</h1>
+	<p>
+	Think about how frustrating it can be to play your favorite video game with lag. You input some command or move your controller, and you don't see the result of your action for several seconds. But what if your lag was much, much worse? We're not talking about a 2 second delay, but something closer to 14 minutes. Still interested in playing?
+	</p>
+	<p>
+	This is the kind of communication delay that Mars rover operators encounter on a daily basis. They send a command to a vehicle some 200 million kilometers from home at time T=0 minutes. At around T=7 minutes, the rover receives the command and sends an acknowledgement home. At time T=14 minutes, mission control receives the message from the rover and proceeds with their next action.
+	</p>
+	<p><b>Q</b>: So how do you driver a rover safely in these conditions?</p>
+	<p>
+	<b>A</b>: Well, very slowly. There's no one around to repair the rover if we crash into an obstacle on Mars. But we can speed things up by adding some level of autonomy.
+	</p>
+	<p>
+	If we let the rover make some decisions for itself, we can eliminate the wait time associated with the Earth-Mars communication delay. Of course, the software must be robust and this is very much an active area of research. <i>The Atlantic</i> recently featured a nice <a src="https://www.theatlantic.com/technology/archive/2017/06/mars-curiosity-rover/531339/">article</a> on Curiosity's AEGIS system, which allows the rover to better select its own science targets.
+	</p>
+
+	<!-- Mission Overview -->
+	<h1>Mission Overview</h1>
+	<p>
+	Our mission is to design a navigation system for the successor to the Mars 2020 mission. One objective of the Mars 2020 mission is to package soil samples for an eventual return to Earth. Our rover must safely navigate the Martian environment and locate the samples to be returned.
+	</p>
+	<p>
+	We designed and implemented a ROS-based software package that allows a rover to semi-autonomously navigate around an unknown maze. The mission consists of two stages: a semi-autonomous mapping phase, and an autonomous navigation phase.
+	</p>
+	<p>
+	At the start of the mission, the rover receives a list of science targets from mission control. In the first phase, a human driver specifies objective waypoints near each science target. When a waypoint is set, the robot uses an A* path planner to navigate to the waypoint while also estimating the location of visible science targets.
+	</p>
+	<p>
+	Once each science target has been located, the second phase automatically begins. The rover switches to autonomous mode and must return to each science target in a specified order.
+	</p>
+	
+	<!-- Details -->
+	<h1>Implementation</h1>
+	<p>
+		<center>
+			<table cellpadding="0" cellspacing="0" border="0">
+				<tr>
+					<td valign="top">
+						<figure>
+							<img src="" alt="" height="400" width="500">
+							<figcaption>Caption</figcaption>
+						</figure>
+					</td>
+					<td valign="top" width="300">
+						<figure>
+							<img src="" alt="" height="400" width="300">
+							<figcaption>Caption<a href="">Source Text</a>
+				        </figcaption>
+						</figure>
+					</td>
+				</tr>
+			</table>
+		</center>
+	</p>
+
+	<p>
+	  <iframe width="854" height="480" src="https://www.youtube.com/embed/ghb6eDopW8I" 		  frameborder="0" allowfullscreen></iframe>
+	</p>
 
     </section>
     </div>
@@ -35,7 +91,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>GitHub Contributors: <a href="https://github.com/mbanderson"></a></p>
+        <p>GitHub Contributors: <a href="https://github.com/mbanderson">Michael Anderson</a>, <a href="https://github.com/connoranderson">Connor Anderson</a>, <a href="https://github.com/kylejbrown17">Kyle Brown</a>, <a href="https://github.com/hala33">Hala Al-Khalil</a></p>
       </footer>
     </div>
 
