Updated image paths.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	Mars rovers are expensive, so the Robotic Autonomy course staff provided us with TurtleBots. The TurtleBot features an RGBD vision sensor, which we feed into the <a href="http://wiki.ros.org/gmapping">gmapping</a> SLAM package for estimating obstacles.
 	<center>
 		<figure>
-			<img src="../images/turtlebots.jpg" alt="TurtleBots" height="400" width="533">
+			<img src="images/turtlebots.jpg" alt="TurtleBots" height="400" width="533">
 			<figcaption><strike>Mars Rovers</strike> Turtlebots. Image courtesy of Ben Hockman</figcaption>
 		</figure>
 	</center>
@@ -72,7 +72,7 @@
 	To represent the Martian environment, Ben Hockman built a maze in the Autonomous Systems Lab. Various science objectives are marked on the maze walls with <a href="http://wiki.ros.org/apriltags_ros">AprilTag</a> fiducials.
 	<center>
 		<figure>
-			<img src="../images/marsmaze.PNG" alt="Mars Maze" height="338" width="600">
+			<img src="images/marsmaze.PNG" alt="Mars Maze" height="338" width="600">
 			<figcaption>The unknown maze environment. Image courtesy of Ed Schmerling</figcaption>
 		</figure>
 	</center>
