Fixed spelling error.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	<p>So what happened in this test? Let's break it down.</p>
 	<h3>Minute 1</h3>
 	<p>
-	The robot started in its semi-autonomous state and received a mission specification from the course staff. Kyle, our human-in-the-loop rover operator, issued a waypoint command toward the first science objective. The rover planned its own path and drove to the commanded waypoint. One interesting occurrence is that the TurtleBot took a longer path to avoid the corner of the maze. This is likely a result of our buffering system; the TurtleBot perceived the obstacles to be larger than they actually area, and deemed the corner to be impassable.
+	The robot started in its semi-autonomous state and received a mission specification from the course staff. Kyle, our human-in-the-loop rover operator, issued a waypoint command toward the first science objective. The rover planned its own path and drove to the commanded waypoint. One interesting occurrence is that the TurtleBot took a longer path to avoid the corner of the maze. This is likely a result of our buffering system; the TurtleBot perceived the obstacles to be larger than they actually are, and deemed the corner to be impassable.
 	</p>
 
 	<h3>Minute 2</h3>
