Added addl discussion to results.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 	<h1>Takeaways</h1>
 	<p>
-	The entire team was extremely happy with our performance. We developed this system in 3 days (with less-than-optimal sleep levels). The test shown was only our second attempt running our software package on the hardware; with a few extra test runs to tune our obstacle buffer radius, we know we could have achieved complete obstacle avoidance. Autonomy achieved!
+	The entire team was extremely happy with our performance. We developed this system in 3 days (with less-than-optimal sleep levels). The test shown was only our second attempt running our software package on the hardware; with a few extra test runs to tune our controller gains and obstacle buffer radius, we know we could have achieved complete obstacle avoidance. Autonomy achieved!
 	</p>
 	
     </section>
