--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<p>
 	This is the kind of communication delay that Mars rover operators encounter on a daily basis. They send a command to a vehicle some 200 million kilometers from home at time T=0 minutes. At around T=7 minutes, the rover receives the command and sends an acknowledgement home. At time T=14 minutes, mission control receives the message from the rover and proceeds with their next action.
 	</p>
-	<p><b>Q</b>: So how do you driver a rover safely in these conditions?</p>
+	<p><b>Q</b>: So how do you drive a rover safely in these conditions?</p>
 	<p>
 	<b>A</b>: Well, very slowly. There's no one around to repair the rover if we crash into an obstacle on Mars. But we can speed things up by adding some level of autonomy.
 	</p>
